2003-10-28  Patrice Dumas  <dumas@centre-cired.fr>

	* doc/: remove unneeded .texi files, now included in texi2html.texi.
	* Makefile.am, doc/Makefile.am: include info file in distribution.

2003-10-26  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: support for @verbatiminclude. When split use the
	-output specification in every cases.
	* texi2html.init: use `&bull;' instead of `*' for node menu entries.
	* Makefile.am: fixes for the inclusion of files in packages.
	* doc/texi2html.texi: add the explanation of the default for all the
	variables. Explain how the strings are customized and how 
	internationalization works.

2003-10-19  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init, examples/html32.init: don't expand
	html automatically, only if it is in @EXPAND. Put html in @EXPAND.
	USE_ISO is now in the default case, but false in html32.init.
	new hash, %iso_symbols for USE_ISO symbols. Rewroted in the public
	domain in texi2html.init. Use iso symbols in preformatted environment
	too.
	When removing texi @-commands with arguments (@table, @deffn...) are
	better handled. Ignore content of @anchor, @footnote, @*ref when 
	removing texi.
	* doc/texi2html.texi: merge content of doc/custpage.texi, 
	doc/custhtml.texi in doc/texi2html.texi.
	* Tests/formatting/formatting.texi: test for all the constructs in 
	the @copying/@end copying section (to test remove_texi).

2003-10-17  Derek Price  <derek@ximbiot.com>

	* doc/stamp-vti, doc/version.texi: Regenerated.

2003-10-17  Derek Price  <derek@ximbiot.com>

	* texi2html.pl (do_text): Compile-once flag is okay as long as the
	pattern portion (left side) of a s/// statement is free of change.

2003-10-15  Patrice Dumas  <derek@ximbiot.com>

	* doc/custhtml.texi, doc/custpage.texi: sync with current code
	(no more $ADDRESS but $end_page, only 2 functions for references).
	* texi2html.pl: -- in normal text is changed in -
	---, -- '' and `` are kept as is in @code, @kbd and so on.
